easycon_script/easyscript/EasyScriptParser.py
# Generated from EasyScript.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class EasyScriptParser ( Parser ):

    grammarFileName = "EasyScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\n'", "'\\r'", "'+'", "<INVALID>", 
                     "'-'", "<INVALID>", "'*'", "'/'", "'%'", "'++'", "'--'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'<<'", 
                     "'>>'", "'&'", "'|'", "'~'", "'^'", "'&='", "'|='", 
                     "'~='", "'^='", "'+='", "'-='", "'*='", "'/='", "'%='", 
                     "'<<='", "'>>='", "'&&='", "'||='", "'='", "'&&'", 
                     "'||'", "'!'", "<INVALID>", "'('", "')'", "'['", "']'", 
                     "','", "'#'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "PLUS", "POS", 
                      "MINUS", "NEG", "MUL", "DIV", "MOD", "INC", "DEC", 
                      "EQ", "NEQ", "LT", "GT", "LTE", "GTE", "SHL", "SHR", 
                      "BITAND", "BITOR", "BITNOT", "BITXOR", "BITAND_EQ", 
                      "BITOR_EQ", "BITNOT_EQ", "BITXOR_EQ", "PLUS_EQ", "MINUS_EQ", 
                      "MUL_EQ", "DIV_EQ", "MOD_EQ", "SHL_EQ", "SHR_EQ", 
                      "AND_EQ", "OR_EQ", "ASSIGN", "AND", "OR", "NOT", "STRCONCAT", 
                      "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "COMMA", 
                      "COMMENT", "CALL", "PRINT", "ALERT", "KEY", "DIRECTION", 
                      "STICK", "WAIT", "RESET", "FOR", "TO", "NEXT", "BREAK", 
                      "CONTINUE", "IF", "ELSE", "ELIF", "ENDIF", "FUNC", 
                      "RETURN", "ENDFUNC", "TIME", "BOOL", "RAND", "AMIIBO", 
                      "STRING", "UID", "VARIABLE", "CONST", "INT10", "INT2", 
                      "INT8", "INT16", "FLOAT", "BOOLEAN", "IMAGE_LABEL", 
                      "INT", "RVAL", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_expression = 2
    RULE_comment = 3
    RULE_print_statement = 4
    RULE_alert_statement = 5
    RULE_key_statement = 6
    RULE_stick_statement = 7
    RULE_wait_statement = 8
    RULE_for_statement = 9
    RULE_break_statement = 10
    RULE_continue_statement = 11
    RULE_assignment = 12
    RULE_function_definition = 13
    RULE_function_call = 14
    RULE_complex_assignment = 15
    RULE_if_statement = 16
    RULE_return_statement = 17
    RULE_tool_statement = 18
    RULE_amiibo_statement = 19

    ruleNames =  [ "program", "statement", "expression", "comment", "print_statement", 
                   "alert_statement", "key_statement", "stick_statement", 
                   "wait_statement", "for_statement", "break_statement", 
                   "continue_statement", "assignment", "function_definition", 
                   "function_call", "complex_assignment", "if_statement", 
                   "return_statement", "tool_statement", "amiibo_statement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    PLUS=3
    POS=4
    MINUS=5
    NEG=6
    MUL=7
    DIV=8
    MOD=9
    INC=10
    DEC=11
    EQ=12
    NEQ=13
    LT=14
    GT=15
    LTE=16
    GTE=17
    SHL=18
    SHR=19
    BITAND=20
    BITOR=21
    BITNOT=22
    BITXOR=23
    BITAND_EQ=24
    BITOR_EQ=25
    BITNOT_EQ=26
    BITXOR_EQ=27
    PLUS_EQ=28
    MINUS_EQ=29
    MUL_EQ=30
    DIV_EQ=31
    MOD_EQ=32
    SHL_EQ=33
    SHR_EQ=34
    AND_EQ=35
    OR_EQ=36
    ASSIGN=37
    AND=38
    OR=39
    NOT=40
    STRCONCAT=41
    LPAREN=42
    RPAREN=43
    LBRACKET=44
    RBRACKET=45
    COMMA=46
    COMMENT=47
    CALL=48
    PRINT=49
    ALERT=50
    KEY=51
    DIRECTION=52
    STICK=53
    WAIT=54
    RESET=55
    FOR=56
    TO=57
    NEXT=58
    BREAK=59
    CONTINUE=60
    IF=61
    ELSE=62
    ELIF=63
    ENDIF=64
    FUNC=65
    RETURN=66
    ENDFUNC=67
    TIME=68
    BOOL=69
    RAND=70
    AMIIBO=71
    STRING=72
    UID=73
    VARIABLE=74
    CONST=75
    INT10=76
    INT2=77
    INT8=78
    INT16=79
    FLOAT=80
    BOOLEAN=81
    IMAGE_LABEL=82
    INT=83
    RVAL=84
    WS=85

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(EasyScriptParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyScriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(EasyScriptParser.StatementContext,i)


        def getRuleIndex(self):
            return EasyScriptParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = EasyScriptParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4138672817627463760) != 0) or ((((_la - 65)) & ~0x3f) == 0 and ((1 << (_la - 65)) & 525947) != 0):
                self.state = 40
                self.statement()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(EasyScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comment(self):
            return self.getTypedRuleContext(EasyScriptParser.CommentContext,0)


        def print_statement(self):
            return self.getTypedRuleContext(EasyScriptParser.Print_statementContext,0)


        def alert_statement(self):
            return self.getTypedRuleContext(EasyScriptParser.Alert_statementContext,0)


        def key_statement(self):
            return self.getTypedRuleContext(EasyScriptParser.Key_statementContext,0)


        def stick_statement(self):
            return self.getTypedRuleContext(EasyScriptParser.Stick_statementContext,0)


        def wait_statement(self):
            return self.getTypedRuleContext(EasyScriptParser.Wait_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(EasyScriptParser.For_statementContext,0)


        def break_statement(self):
            return self.getTypedRuleContext(EasyScriptParser.Break_statementContext,0)


        def continue_statement(self):
            return self.getTypedRuleContext(EasyScriptParser.Continue_statementContext,0)


        def assignment(self):
            return self.getTypedRuleContext(EasyScriptParser.AssignmentContext,0)


        def function_definition(self):
            return self.getTypedRuleContext(EasyScriptParser.Function_definitionContext,0)


        def function_call(self):
            return self.getTypedRuleContext(EasyScriptParser.Function_callContext,0)


        def complex_assignment(self):
            return self.getTypedRuleContext(EasyScriptParser.Complex_assignmentContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(EasyScriptParser.If_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(EasyScriptParser.Return_statementContext,0)


        def tool_statement(self):
            return self.getTypedRuleContext(EasyScriptParser.Tool_statementContext,0)


        def amiibo_statement(self):
            return self.getTypedRuleContext(EasyScriptParser.Amiibo_statementContext,0)


        def getRuleIndex(self):
            return EasyScriptParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = EasyScriptParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 48
                self.comment()
                pass

            elif la_ == 2:
                self.state = 49
                self.print_statement()
                pass

            elif la_ == 3:
                self.state = 50
                self.alert_statement()
                pass

            elif la_ == 4:
                self.state = 51
                self.key_statement()
                pass

            elif la_ == 5:
                self.state = 52
                self.stick_statement()
                pass

            elif la_ == 6:
                self.state = 53
                self.wait_statement()
                pass

            elif la_ == 7:
                self.state = 54
                self.for_statement()
                pass

            elif la_ == 8:
                self.state = 55
                self.break_statement()
                pass

            elif la_ == 9:
                self.state = 56
                self.continue_statement()
                pass

            elif la_ == 10:
                self.state = 57
                self.assignment()
                pass

            elif la_ == 11:
                self.state = 58
                self.function_definition()
                pass

            elif la_ == 12:
                self.state = 59
                self.function_call()
                pass

            elif la_ == 13:
                self.state = 60
                self.complex_assignment()
                pass

            elif la_ == 14:
                self.state = 61
                self.if_statement()
                pass

            elif la_ == 15:
                self.state = 62
                self.return_statement()
                pass

            elif la_ == 16:
                self.state = 63
                self.tool_statement()
                pass

            elif la_ == 17:
                self.state = 64
                self.amiibo_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyScriptParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(EasyScriptParser.ExpressionContext,i)


        def POS(self):
            return self.getToken(EasyScriptParser.POS, 0)

        def NEG(self):
            return self.getToken(EasyScriptParser.NEG, 0)

        def BITNOT(self):
            return self.getToken(EasyScriptParser.BITNOT, 0)

        def NOT(self):
            return self.getToken(EasyScriptParser.NOT, 0)

        def RVAL(self):
            return self.getToken(EasyScriptParser.RVAL, 0)

        def LPAREN(self):
            return self.getToken(EasyScriptParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(EasyScriptParser.RPAREN, 0)

        def MUL(self):
            return self.getToken(EasyScriptParser.MUL, 0)

        def DIV(self):
            return self.getToken(EasyScriptParser.DIV, 0)

        def MOD(self):
            return self.getToken(EasyScriptParser.MOD, 0)

        def PLUS(self):
            return self.getToken(EasyScriptParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(EasyScriptParser.MINUS, 0)

        def SHL(self):
            return self.getToken(EasyScriptParser.SHL, 0)

        def SHR(self):
            return self.getToken(EasyScriptParser.SHR, 0)

        def BITAND(self):
            return self.getToken(EasyScriptParser.BITAND, 0)

        def BITOR(self):
            return self.getToken(EasyScriptParser.BITOR, 0)

        def BITXOR(self):
            return self.getToken(EasyScriptParser.BITXOR, 0)

        def AND(self):
            return self.getToken(EasyScriptParser.AND, 0)

        def OR(self):
            return self.getToken(EasyScriptParser.OR, 0)

        def EQ(self):
            return self.getToken(EasyScriptParser.EQ, 0)

        def NEQ(self):
            return self.getToken(EasyScriptParser.NEQ, 0)

        def LT(self):
            return self.getToken(EasyScriptParser.LT, 0)

        def GT(self):
            return self.getToken(EasyScriptParser.GT, 0)

        def LTE(self):
            return self.getToken(EasyScriptParser.LTE, 0)

        def GTE(self):
            return self.getToken(EasyScriptParser.GTE, 0)

        def getRuleIndex(self):
            return EasyScriptParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = EasyScriptParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 6, 22, 40]:
                self.state = 68
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1099515822160) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 69
                self.expression(9)
                pass
            elif token in [84]:
                self.state = 70
                self.match(EasyScriptParser.RVAL)
                pass
            elif token in [42]:
                self.state = 71
                self.match(EasyScriptParser.LPAREN)
                self.state = 72
                self.expression(0)
                self.state = 73
                self.match(EasyScriptParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 97
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 95
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = EasyScriptParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 77
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 78
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 896) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 79
                        self.expression(9)
                        pass

                    elif la_ == 2:
                        localctx = EasyScriptParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 80
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 81
                        _la = self._input.LA(1)
                        if not(_la==3 or _la==5):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 82
                        self.expression(8)
                        pass

                    elif la_ == 3:
                        localctx = EasyScriptParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 83
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 84
                        _la = self._input.LA(1)
                        if not(_la==18 or _la==19):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 85
                        self.expression(7)
                        pass

                    elif la_ == 4:
                        localctx = EasyScriptParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 86
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 87
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 11534336) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 88
                        self.expression(6)
                        pass

                    elif la_ == 5:
                        localctx = EasyScriptParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 89
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 90
                        _la = self._input.LA(1)
                        if not(_la==38 or _la==39):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 91
                        self.expression(5)
                        pass

                    elif la_ == 6:
                        localctx = EasyScriptParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 92
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 93
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 258048) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 94
                        self.expression(4)
                        pass

             
                self.state = 99
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class CommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(EasyScriptParser.COMMENT, 0)

        def getRuleIndex(self):
            return EasyScriptParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)




    def comment(self):

        localctx = EasyScriptParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_comment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(EasyScriptParser.COMMENT)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -8) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 4194303) != 0):
                self.state = 101
                _la = self._input.LA(1)
                if _la <= 0 or _la==1 or _la==2:
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 107
                self.match(EasyScriptParser.T__1)


            self.state = 110
            self.match(EasyScriptParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(EasyScriptParser.PRINT, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyScriptParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(EasyScriptParser.ExpressionContext,i)


        def STRCONCAT(self, i:int=None):
            if i is None:
                return self.getTokens(EasyScriptParser.STRCONCAT)
            else:
                return self.getToken(EasyScriptParser.STRCONCAT, i)

        def getRuleIndex(self):
            return EasyScriptParser.RULE_print_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_statement" ):
                listener.enterPrint_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_statement" ):
                listener.exitPrint_statement(self)




    def print_statement(self):

        localctx = EasyScriptParser.Print_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_print_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(EasyScriptParser.PRINT)
            self.state = 113
            self.expression(0)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==41:
                self.state = 114
                self.match(EasyScriptParser.STRCONCAT)
                self.state = 115
                self.expression(0)
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Alert_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALERT(self):
            return self.getToken(EasyScriptParser.ALERT, 0)

        def expression(self):
            return self.getTypedRuleContext(EasyScriptParser.ExpressionContext,0)


        def getRuleIndex(self):
            return EasyScriptParser.RULE_alert_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlert_statement" ):
                listener.enterAlert_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlert_statement" ):
                listener.exitAlert_statement(self)




    def alert_statement(self):

        localctx = EasyScriptParser.Alert_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_alert_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(EasyScriptParser.ALERT)
            self.state = 122
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Key_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEY(self):
            return self.getToken(EasyScriptParser.KEY, 0)

        def VARIABLE(self):
            return self.getToken(EasyScriptParser.VARIABLE, 0)

        def getRuleIndex(self):
            return EasyScriptParser.RULE_key_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKey_statement" ):
                listener.enterKey_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKey_statement" ):
                listener.exitKey_statement(self)




    def key_statement(self):

        localctx = EasyScriptParser.Key_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_key_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(EasyScriptParser.KEY)
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 125
                self.match(EasyScriptParser.VARIABLE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stick_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STICK(self):
            return self.getToken(EasyScriptParser.STICK, 0)

        def RESET(self):
            return self.getToken(EasyScriptParser.RESET, 0)

        def COMMA(self):
            return self.getToken(EasyScriptParser.COMMA, 0)

        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(EasyScriptParser.VARIABLE)
            else:
                return self.getToken(EasyScriptParser.VARIABLE, i)

        def DIRECTION(self):
            return self.getToken(EasyScriptParser.DIRECTION, 0)

        def getRuleIndex(self):
            return EasyScriptParser.RULE_stick_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStick_statement" ):
                listener.enterStick_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStick_statement" ):
                listener.exitStick_statement(self)




    def stick_statement(self):

        localctx = EasyScriptParser.Stick_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stick_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(EasyScriptParser.STICK)
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [-1, 4, 6, 22, 40, 42, 46, 47, 48, 49, 50, 51, 52, 53, 54, 56, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 74, 75, 84]:
                self.state = 130
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 129
                    _la = self._input.LA(1)
                    if not(_la==52 or _la==74):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 132
                    self.match(EasyScriptParser.COMMA)
                    self.state = 133
                    self.match(EasyScriptParser.VARIABLE)


                pass
            elif token in [55]:
                self.state = 136
                self.match(EasyScriptParser.RESET)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Wait_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(EasyScriptParser.ExpressionContext,0)


        def WAIT(self):
            return self.getToken(EasyScriptParser.WAIT, 0)

        def getRuleIndex(self):
            return EasyScriptParser.RULE_wait_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWait_statement" ):
                listener.enterWait_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWait_statement" ):
                listener.exitWait_statement(self)




    def wait_statement(self):

        localctx = EasyScriptParser.Wait_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_wait_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==54:
                self.state = 139
                self.match(EasyScriptParser.WAIT)


            self.state = 142
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(EasyScriptParser.FOR, 0)

        def NEXT(self):
            return self.getToken(EasyScriptParser.NEXT, 0)

        def expression(self):
            return self.getTypedRuleContext(EasyScriptParser.ExpressionContext,0)


        def VARIABLE(self):
            return self.getToken(EasyScriptParser.VARIABLE, 0)

        def ASSIGN(self):
            return self.getToken(EasyScriptParser.ASSIGN, 0)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(EasyScriptParser.INT)
            else:
                return self.getToken(EasyScriptParser.INT, i)

        def TO(self):
            return self.getToken(EasyScriptParser.TO, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyScriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(EasyScriptParser.StatementContext,i)


        def getRuleIndex(self):
            return EasyScriptParser.RULE_for_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_statement" ):
                listener.enterFor_statement(self)
